# mkube-console

./: .gitignore  Cargo.toml  Dockerfile  build.rs  build.sh  config.yaml  deploy.sh
.github/workflows/: build.yml
mkube-console/: Dockerfile  go.mod  go.sum
mkube-console/.github/workflows/: build.yml
mkube-console/cmd/mkube-console/: main.go
mkube-console/config/: config.go
mkube-console/internal/api/: router.go
mkube-console/internal/cluster/: aggregator.go  client.go
mkube-console/internal/ui/: helpers.go  ui.go
mkube-console/internal/ui/static/css/: style.css
mkube-console/internal/ui/templates/: dashboard.html  layout.html  logs.html  node-detail.html  nodes.html  partials.html  pod-detail.html  pods.html  registry.html
src/: config.rs  helpers.rs  main.rs
src/clients/: aggregator.rs  mod.rs
src/models/: k8s.rs  mod.rs  views.rs
src/routes/: api.rs  mod.rs  sse.rs  ui.rs
static/css/: fonts.css  input.css  style.css
static/js/: sse.js
templates/: bmh_detail.html  bmhs.html  configmap_detail.html  configmaps.html  consistency.html  container_detail.html  dashboard.html  deployment_detail.html  deployments.html  events.html  iscsi_cdrom_detail.html  iscsi_cdroms.html  layout.html  logs.html  macros.html  namespace_detail.html  namespaces.html  network_detail.html  networks.html  node_detail.html  nodes.html  pod_detail.html  pods.html  pvcs.html  registry.html
