[package]
name = "mkube-console"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
askama = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures-util = "0.3"
base64 = "0.22"
